--- a/a4/Makefile
+++ b/a4/Makefile
@@ -1,10 +1,11 @@
 CFLAGS += -std=gnu11 -g
-EXES    = greet
+EXES    = greet BinaryTree
 
 all:  $(EXES)
 clean:
 	rm -f $(EXES)
 
 greet: greet.c
+BinaryTree: BinaryTree.c
 # don't treat all and clean as file targets
 .PHONY: all clean
