--- a/a8/q3/Makefile
+++ b/a8/q3/Makefile
@@ -1,10 +1,11 @@
 CFLAGS += -std=gnu11 -g
-EXES = sm
+EXES = sm sm-jt
 OBJS = sm.o
 
 all: $(EXES)
 
 sm: sm.o
+sm-jt: sm-jt.o
 
 clean:
 	rm -f $(EXES) $(OBJS)
