--- a/a11/Makefile
+++ b/a11/Makefile
@@ -1,7 +1,7 @@
 UTHREAD = ./uthreads
-TARGETS = smoke well pc_sem smoke_sem well_sem
+TARGETS = smoke well pc_sem smoke_sem well_sem test
 
-OBJS = $(UTHREAD)/uthread.o $(UTHREAD)/uthread_mutex_cond.o $(UTHREAD)/uthread_sem.o
+OBJS = $(UTHREAD)/uthread.o $(UTHREAD)/uthread_mutex_cond.o $(UTHREAD)/uthread_sem.o 
 JUNKF = $(OBJS) *~
 JUNKD = *.dSYM
 CFLAGS  += -g -std=gnu11 -I$(UTHREAD)
@@ -9,8 +9,9 @@ UNAME = $(shell uname)
 ifeq ($(UNAME), Linux)
 LDFLAGS += -pthread
 endif
-all: $(TARGETS)
+all: $(TARGETS) 
 $(TARGETS): $(OBJS)
+
 tidy:
 	rm -f $(JUNKF); rm -rf $(JUNKD)
 clean:
